feat #28: add content to response on post/put requests
