# server/src/main/java/org/editor/boundary/CanvasController.java
@@ -33,12 +33,12 @@ public class CanvasController {
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
     public Response createCanvas(@RequestBody CanvasDto canvasDto) {
-        return new Response(HttpStatus.CREATED.value(), canvasService.create(canvasDto.content()));
+        return new Response(HttpStatus.CREATED.value(), canvasMapper.mapToCanvasDto(canvasService.create(canvasDto.content())));
     }
 
     @PutMapping("/{id}")
     public Response updateCanvas(@PathVariable String id, @RequestBody CanvasDto canvasDto) {
-        return new Response(HttpStatus.OK.value(), canvasService.update(id, canvasDto.content()));
+        return new Response(HttpStatus.OK.value(), canvasMapper.mapToCanvasDto(canvasService.update(id, canvasDto.content())));
     }
 
     @DeleteMapping("/{id}")
